re install a bunch of things and rebuild project, fix the double underline issue in the new match form, but still have spacing issue

--- a/src/app/new-match/new-match.component.scss
+++ b/src/app/new-match/new-match.component.scss
@@ -6,10 +6,7 @@
   width: 100%;
 }
 
-.mat-form-field-underline {
-  visibility: hidden;
-}
-
-.mat-form-field-subscript-wrapper {
-  visibility: hidden;
+input:not([read-only]) {
+	border-bottom: none!important;
+	box-shadow: none!important;
 }
